version/0.17/_sources/api/solver/_autosummary/settings/mass_flow_inlet.rst.txt
:orphan:

.. _mass_flow_inlet:

mass_flow_inlet
===============

.. autoclass:: ansys.fluent.core.solver.settings_232.mass_flow_inlet.mass_flow_inlet
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

