version/0.20/_sources/api/solver/_autosummary/settings/mass_flow_inlet.rst.txt
:orphan:

.. _mass_flow_inlet:

mass_flow_inlet
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.mass_flow_inlet.mass_flow_inlet
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`mass_flow_inlet_child <mass_flow_inlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

